setting up work flow and build ideas in ReadMe. will be deleted later.

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,2 @@
-*{margin:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box}
+*{margin:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box}body{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;text-align:center;position:relative;top:14rem;pad:5rem}body .test{display:inline-block;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;text-align:center;padding:5rem}body .test button{position:relative;top:1rem}body .test p{padding:1rem;margin:1rem}
 /*# sourceMappingURL=style.css.map */
