--- a/style.scss
+++ b/style.scss
@@ -2,32 +2,62 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 62.5%;
+    font-family: 'Space Mono';
 }
 
+//variables
+
+$light-color: rgb(240, 229, 229);
+
+
+
+//main code
 body {
-    display: flex;
+    // background-image: url(../img/wp6622990-fake-broken-screen-wallpapers.jpg);
+    background-color: rgb(53, 49, 49);
+    position: relative;
+    background-attachment: fixed;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    height: 100vh;
+    display: flex;
+}
+
+//main class effect code
+.window-container {
+
+    width: 80rem;
+    height: 100rem;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+    border-radius: 5px;
     position: relative;
-    top: 14rem;
-    pad: 5rem;
+    z-index: 1;
+    background: inherit;
+    overflow: hidden;
+    border-radius: 5%;
 
-    .test {
-        display: inline-block;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        padding: 5rem;
+    &:before {
+        content: "";
+        position: absolute;
+        background: inherit;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+        filter: blur(10px);
+        margin: -20px;
+    } 
 
-        button {
-            position: relative;
-            top: 1rem;
-        }
+    .intro-heading {
+        font-size: 5.5em;
+        color: $light-color;
+    }
 
-        p {
-            padding: 1rem;
-            margin: 1rem;
-        }
+    .date-holder {
+        font-size: 2rem;
+        color: $light-color;
     }
 }
