--- a/style.scss
+++ b/style.scss
@@ -25,11 +25,18 @@ $light-color: rgb(240, 229, 229);
     -webkit-box-shadow: inset 0 0 6px rgba(88, 58, 196, 0.5); 
 }
 
+//grids
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: .5rem;
+}
 
 
 //main code
 body {
-    // background-image: url(../img/wp6622990-fake-broken-screen-wallpapers.jpg);
+    background-image: url(../img/wp6622990-fake-broken-screen-wallpapers.jpg);
     background-color: rgb(53, 49, 49);
     position: relative;
     background-attachment: fixed;
@@ -77,21 +84,96 @@ body {
     }
 
     .card {
+        // display: flex;
+        // align-content: center;
+        // justify-content: space-between;
         height: 20rem;
         width: 40rem;
-        background-color: rgb(166, 162, 204);
+        // background-color: rgb(166, 162, 204);
         opacity: .2;
         margin: 1rem;
         padding: 1rem;
         border-radius: 10%;
-        align-items: center;
-        justify-content: center;
 
-        input {
+        textarea {
             background-color: black;
             color: $light-color;
-            height: 3rem;
+            // height: 15rem;
+            // width: 30rem;
+            max-height: 17rem;
+            max-width: 37rem;
             font-size: 2rem;
         }
+
+        .btn {
+            display: block;
+            padding: 1rem;
+            margin: 1rem;
+            height: 3.5rem;
+            width: 8rem;
+            position: relative;
+            display: inline-block;
+            color: #281130;
+            font-size: 2rem;
+            letter-spacing: 0.02em;
+            text-decoration: none;
+            z-index: 1;
+    
+            //animation for button glitch
+            &:before,
+            &:after {
+                content:'';
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+            }
+
+            &:before {
+                background-color: #00ffff;
+                z-index: -1;
+            }
+
+            &:after {
+                background-color: #ff00ff;
+                z-index: -2;
+            }
+    
+            &:hover {
+                .link-inner {
+                    animation: glitchy 0.3s ease 1;
+                }   
+
+                &:before {
+                    animation: glitchy 0.3s ease 0.3s infinite;
+                }
+        
+                &:after {
+                    animation: glitchy 0.3s ease infinite reverse;
+                }
+            }
+        }
+
     }
+}
+
+
+
+//keyframes
+
+@keyframes glitchy {
+    0%   {transform: translate(-2px, 2px);}
+    25%  {transform: translate(-2px, -2px);}
+    50%  {transform: translate(2px, 2px);}
+    75%  {transform: translate(2px, -2px);}
+    100%  {transform: translate(-2px, 2px);}
+}
+
+@keyframes line-glitchy {
+    0%   {transform: translate(-1px, 1px);}
+    25%  {transform: translate(-1px, -1px);}
+    50%  {transform: translate(1px, 1px);}
+    75%  {transform: translate(1px, -1px);}
+    100%  {transform: translate(-1px, 1px);}
 }
