working on more styling ideas

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,7 +5,12 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 62.5%;
-    font-family: 'Space Mono';
+    font-family: 'Share Tech Mono';
+
+    &:focus {
+        outline: none;
+        border: none;
+    }
 }
 
 //variables
@@ -18,24 +23,32 @@ $light-color: rgb(240, 229, 229);
 }
  
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(74, 59, 161, 0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgb(53, 27, 199); 
     border-radius: 10px;
 }
  
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(88, 58, 196, 0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgb(71, 32, 212); 
 }
 
 //grids
+
+.body-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: .5rem;
+    justify-content: center; 
+}
 
 .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: .5rem;
-    justify-content: center;
-    
+    justify-content: center; 
 }
+
+
 
 //hide function
 
@@ -56,6 +69,56 @@ body {
     display: flex;
 }
 
+.full-window-holder {
+
+    background-color: rgba(90, 86, 86, 0.541);
+
+    .welcome-text {
+        text-align: center;
+        font-size: 4.2rem;
+        font-family: 'Space Mono';
+        color: #7AFB4C;
+    }
+
+    .text-link {
+        position: relative;
+        display: inline-block;
+        text-decoration: none;
+        color: #fff;
+        z-index: 1;
+        
+        &:before,
+        &:after {
+            content:attr(data-content);
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+        
+        &:before {
+            color: #00ffff;
+            z-index: -1;
+        }
+    
+        &:after {
+            color: #ff00ff;
+            z-index: -2;
+        }
+        
+        &:hover {
+            &:before {
+                animation: glitchy 0.3s ease 0.3s infinite;
+            }
+            
+            &:after {
+                animation: glitchy 0.3s ease infinite reverse;
+            }
+        }
+    }
+}
+
 //main class effect code
 .window-container {
 
@@ -67,6 +130,7 @@ body {
     z-index: 1;
     background: inherit;
     overflow: scroll;
+    border: rgba(0, 0, 0, .9) solid .7rem;
     border-radius: 5%;
 
     &:before {
@@ -100,7 +164,7 @@ body {
         // align-content: center;
         // justify-content: space-between;
         height: 20rem;
-        width: 40rem;
+        width: 35rem;
         // background-color: rgb(166, 162, 204);
         opacity: .89;
         margin: 1rem;
@@ -126,6 +190,7 @@ body {
             position: relative;
             display: inline-block;
             color: #281130;
+            font-family: 'Space Mono';
             font-size: 2rem;
             letter-spacing: 0.02em;
             text-decoration: none;
@@ -191,3 +256,20 @@ body {
     100%  {transform: translate(-1px, 1px);}
 }
 
+@media screen and (max-width: 1070px) {
+
+    .body-grid {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
+    .body {
+        width: 75rem;
+    }
+
+    .title {
+        width: 75rem;
+    }
+   
+    
+}
